# smart-fetcher

./: .gitignore  CLAUDE.md  Makefile  README.md  agent_actions.jsonl  main.py  pyproject.toml
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
specs/001-dspy-tag-fetcher/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-nl-uuid-search/: plan.md  spec.md
specs/002-ollama-health-check/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-expand-dataset/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  tasks.md.bak
specs/004-nl-uuid-search/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-react-agent-endpoint/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-rename-citations-resources/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-bool-resource-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  config.py  main.py
src/api/: __init__.py  routes.py  schemas.py
src/models/: __init__.py  resource.py
src/services/: __init__.py  nl_search_service.py  nl_tag_extractor.py  resource_store.py  semantic_search.py
src/utils/: __init__.py  agent_logger.py  dataset_validator.py  link_verifier.py
tests/: __init__.py  conftest.py
tests/contract/: __init__.py  test_agent_contract.py  test_health_responses.py  test_list_responses.py  test_nl_search_responses.py  test_resource_responses.py  (+1 more)
(+32 files in other folders)
